feat: Add comprehensive testing infrastructure and dependencies
📦 Dependencies Management:
- Added test dependencies to requirements.txt (pytest, coverage, mocking tools)
- Created requirements-dev.txt for full development environment
- Included code quality tools (black, flake8, mypy, bandit)
- Added performance profiling and debugging tools

🧪 Testing Configuration:
- Created pytest.ini with comprehensive test configuration
- Set up test markers for categorization (unit, integration, e2e, performance, security)
- Configured coverage reporting (HTML, XML, terminal)
- Added timeout and filtering settings

🔧 Test Fixtures and Utilities:
- Created tests/conftest.py with shared fixtures
- Mock objects for all major components (Coinbase, LLM, DataCollector)
- Sample test data (portfolio, trades, market data)
- Utility functions for test assertions and file operations
- Automatic test environment setup

📊 Test Categories and Markers:
- unit: Individual component testing
- integration: Component interaction testing
- e2e: End-to-end workflow testing
- performance: Load and performance testing
- security: Security vulnerability testing
- api: External API dependent tests
- simulation: Safe simulation mode tests

🛠️ Development Tools:
- Pre-commit hooks configuration
- Documentation generation with Sphinx
- Memory and line profiling tools
- Enhanced debugging with pdb++ and ipdb
- Test environment isolation

Updated test README with new dependency installation options.
Ready for implementing the comprehensive test suite.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,16 @@ dataclasses==0.6
 # No longer needed as we're using Python's built-in http.server
 # flask==2.0.1
 # werkzeug==2.0.1
+
+# Testing Dependencies
+pytest>=7.4.0
+pytest-mock>=3.11.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-benchmark>=4.0.0
+pytest-xdist>=3.3.0  # For parallel test execution
+pytest-html>=3.2.0   # For HTML test reports
+coverage>=7.2.0       # Additional coverage tools
+factory-boy>=3.3.0    # For test data generation
+freezegun>=1.2.0      # For time-based testing
+responses>=0.23.0     # For HTTP request mocking
