SECURITY: Remove service account key and strengthen .gitignore
 CRITICAL SECURITY FIX:
- Removed accidentally committed service account private key
- Updated .gitignore to prevent future credential commits
- Added comprehensive JSON file exclusions with safe exceptions

 ACTION REQUIRED:
- Revoke and regenerate the exposed service account key in Google Cloud Console
- Update GOOGLE_APPLICATION_CREDENTIALS to point to new key file

--- a/.gitignore
+++ b/.gitignore
@@ -113,9 +113,14 @@ TEMP_*_ANALYSIS.md
 PROJECT_*.md
 
 # Credentials (should be in secure location)
-google.json
-*.json.backup
-intense-base*.json
+*.json
+!google.json.template
+!package.json
+!package-lock.json
+!**/package.json
+!**/package-lock.json
+!data/**/*.json
+!tests/**/*.json
 
 # Coverage files
 .coverage
